# PortableSSL

./: CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
include/: portable_ssl.h
include/crypto/: aes.h  crypto.h  rsa.h  sha256.h
include/platform/: platform.h
include/tls/: tls.h
include/util/: util.h
src/: portable_ssl.c
src/cli/: CMakeLists.txt  main.c
src/crypto/: CMakeLists.txt  crypto.c
src/crypto/aes/: CMakeLists.txt  aes.c  aes_block.c  aes_modes.c
src/crypto/rsa/: CMakeLists.txt  rsa.c  rsa_key.c  rsa_oaep.c  rsa_pkcs1.c
src/crypto/sha256/: CMakeLists.txt  sha256.c
src/platform/: CMakeLists.txt  platform.c
src/tls/: CMakeLists.txt  tls.c
src/tls/client/: CMakeLists.txt
src/tls/common/: CMakeLists.txt
src/tls/server/: CMakeLists.txt
src/util/: CMakeLists.txt  util.c
tests/: CMakeLists.txt  test_aes.c  test_sha256.c
